# protoed

./: .gitattributes  .gitignore  .gitmodules  README.md  justfile  main.cpp  meson.build  meson.options  nativefiledialog_glfw.cpp
fonts/: DroidSansMNerdFontMono-Regular.font.h
proto/: msg.proto
subprojects/: libxcursor.wrap  libxext.wrap  libxinerama.wrap  libxrandr.wrap  libxrender.wrap
